--- a/src/MultiCheck/MultiCheck.css
+++ b/src/MultiCheck/MultiCheck.css
@@ -32,11 +32,11 @@ body {
     outline: none;
   }
   
-  .todo-container {
+  .multi-container {
     width: 600px;
     margin: 0 auto;
   }
-  .todo-container .todo-wrap {
+  .multi-container .multi-wrap {
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 5px;
@@ -44,7 +44,7 @@ body {
 
 
   /*header*/
-.todo-header input {
+.multi-header input {
     width: 560px;
     height: 28px;
     font-size: 14px;
@@ -53,28 +53,20 @@ body {
     padding: 4px 7px;
   }
   
-  .todo-header input:focus {
+  .multi-header input:focus {
     outline: none;
     border-color: rgba(82, 168, 236, 0.8);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
   }
   
 /*main*/
-.todo-main {
+.multi-main {
     margin-left: 0px;
     border: 1px solid #ddd;
     border-radius: 2px;
     padding: 0px;
   }
   
-  .todo-empty {
-    height: 40px;
-    line-height: 40px;
-    border: 1px solid #ddd;
-    border-radius: 2px;
-    padding-left: 5px;
-    margin-top: 10px;
-  }
 
   /*item*/
 li {
@@ -113,27 +105,27 @@ li {
 
 
  /*footer*/
-.todo-footer {
+.multi-footer {
     height: 40px;
     line-height: 40px;
     padding-left: 6px;
     margin-top: 5px;
   }
   
-  .todo-footer label {
+  .multi-footer label {
     display: inline-block;
     margin-right: 20px;
     cursor: pointer;
   }
   
-  .todo-footer label input {
+  .multi-footer label input {
     position: relative;
     top: -1px;
     vertical-align: middle;
     margin-right: 5px;
   }
   
-  .todo-footer button {
+  .multi-footer button {
     float: right;
     margin-top: 5px;
   }
